--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /* global */
-@import url('https://fonts.googleapis.com/css?family=Roboto');
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@1,600&display=swap');
 
 .grid-2{
     display: grid;
@@ -9,8 +9,8 @@
 body{
     margin: 0;
     padding: 0;
-    font-family: 'Roboto', sans-serif;
-    background-color: #101214;
+    font-family: 'Playfair Display', serif;
+    background-color: #F8CA00;
     color: #7A7C80;
 
 }
